--- a/main.html
+++ b/main.html
@@ -7,11 +7,24 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Single+Day&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <!--font-family: 'Open Sans', sans-serif;-->
+    <script src="script.js"></script>
+    
 </head>
 <body>
-    
+    <div style="text-align: center; font-family: 'Single Day', cursive; font-size: xx-large;">
+        어셈블러(자바스크립트를 사용하였습니다)
+    <br>    
+    <div class="assemblerbox">
+        <div id="codes">
+코드
+        </div><div id="assemble">
+조립하기
+        </div><div id="blocks">
+명령어 블럭
+    </div>
+    </div>
+</div>
 </body>
 </html>
