--- a/main.html
+++ b/main.html
@@ -92,7 +92,7 @@ HEX
 <div  class="codeselecter" id = "codeselecter2" style="display:none;">
         <span class="firstselecter">명령어 사용하기</span>
         <span class="secondselecter"> A + B </span>
-        <span class="thirdselecter"> 목적지 없음</span>
+        <span class="thirdselecter">목적지 없음</span>
         <span class="fourthselecter"> 점프 안함 </span>
 </div>
 
@@ -153,9 +153,57 @@ HEX
         <div class="secondselecter" id="110000">현재 메모리 주소에 있는 메모리 값 가져오기</div> 
 
 </div>
-
+<br>
+<br>
+계산 결과 목적지
+<div id="selectbox3">
+<div>
+        <input type="checkbox" id="dirA">
+        <span>A</span>
+      </div>
+ 
+      <div>
+        <input type="checkbox" id="dirB">
+        <span>B</span>
+      </div>
+      <div>
+      <input type="checkbox" id="dirRam">
+      <span>RAM</span>
+    </div>
+    <div>
+        <input type="checkbox" id="dirRam2">
+        <span>점프 주소 레지스터</span>
+      </div>
+    <div>
+      <input type="checkbox" id="dirRam2">
+      <span>RAM 주소 레지스터</span>
+    </div>
+    <br>
+    <br>
+    <div>결과물:</div>
+   <span class="thirdselecter" id="00000">목적지 없음</span>
+    
+  
+ 
+   
 </div>
 
+<br>
+<br>
+점프 조건
+<div id="selectbox4">
+        <div class="fourthselecter" id="000">점프 안함</div>
+        <div class="fourthselecter" id="100">0보다 작으면</div>
+        
+        <div class="fourthselecter" id="010">0보다 크면</div>
+        <div class="fourthselecter" id="001">0이면</div>
+        <div class="fourthselecter" id="110">0이 아니면</div>
+        <div class="fourthselecter" id="101">0보다 작거나 같으면</div>
+        <div class="fourthselecter" id="011">0보다 크거나 같으면</div>
+        <div class="fourthselecter" id="111">무조건 점프</div>
+</div>
+
+</div>
 
 <script src="script.js"></script>
 </body>
