--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 
 <body>
 
-<h1>ChatGPT와 메타버스 시대를 역행하는 16비트 구식 CPU, A.K.E.E CPU</h1>
+<h1>ChatGPT와 메타버스 시대를 역행하는 16비트 CPU, A.K.E.E CPU</h1>
 <hr>
 <img src="https://media.contentapi.ea.com/content/dam/game-objects/plants-vs-zombies-2-game-objects/plants/akee.png.adapt.crop16x9.png" alt="">
 <br>
@@ -39,7 +39,7 @@
 
 <img src="https://drive.google.com/uc?export=view&id=19lJ7uQgBDRT6Ua7rTtgTMto4JfPylyPB" style="width: 30%; height: 30%">
 <img src="https://drive.google.com/uc?export=view&id=1WUBv3yH-8raYZre9mWCrg7UWAwF4rBTD" style="width: 10%; height: 10%">
-<span>  &lt;-- APU</span>
+<span>  &lt;-- ALU</span>
 <br>
 <br>
 <div style="font-size: larger;">    A.K.E.E CPU는 자작 16비트 CPU 입니다. A,B 레지스터를 포함하여 4개의 레지스터, 128KB의 RAM과 ROM을 가지고 있고, 곱셈/나눗셈 전용 회로와 자체적인 명령어 집합을 가지고 있습니다. 현재 LOGISIM을 지원하며 추후 마인크래프트 레드스톤으로도 구현할 계획입니다.</div>
