--- a/main.html
+++ b/main.html
@@ -83,8 +83,14 @@
 (이 밑은 A.K.E.E cpu에 쓰이는 기계어를 코딩하는데 쓰이는 어셈블러가 있습니다. 현재는 html과 css 껍데기만 있지만 나중에 자바스크립트를 배우면 실제로 작동하는 어셈블러를 만들 것입니다.)
 <br>
 <br>
+<br>
+<br>
+<br>
     <div style="text-align: center; font-family: 'Single Day', cursive; font-size: xx-large;">
-        A.K.E.E CPU 전용 어셈블러(자바스크립트를 사용하였습니다)(미완성)
+        A.K.E.E CPU 전용 어셈블러(자바스크립트를 사용하였습니다)(미완성) 
+        <br>
+        <br>
+    
     <br>    
     <div class="assemblerbox">
         <div id="codes">
@@ -155,7 +161,7 @@ HEX
 </div>
 
 <div class="codeselecter" id = "codeselecter1" >
-        <span class="firstselecter">A값 지정(32767 최대)</span>
+        <span class="firstselecter">A값 지정(0 ~ 32767)</span>
         <input type="text" size="110" maxlength="5">
 </div>
 
@@ -182,7 +188,7 @@ HEX
 
 
 <div id="selectbox1">
-        <div class="firstselecter" id="0">A값 지정(0~32767)</div>
+        <div class="firstselecter" id="0">A값 지정(0 ~ 32767)</div>
         <div class="firstselecter" id="1">명령어 사용하기</div>
 </div>
 <br>
