--- a/main.html
+++ b/main.html
@@ -131,7 +131,8 @@ HEX
     </div>
     </span>
     
-    <div id="codeaddbutton"> <div id="addit">새로운 코드 추가</div><div id="deleteit">마지막 코드 제거</div> </div>     
+    <div id="codeaddbutton"> <div id="addit">새로운 코드 추가</div><div id="deleteit">마지막 코드 제거</div> </div>  
+    <div id="copybutton"> <div id="binarycopy">클립보드에 코드 복사</div><div id="hexcopy">HEX로 복사</div> </div>   
         </div><div id="assemble">
 조립하기
 
