--- a/main.html
+++ b/main.html
@@ -80,14 +80,14 @@
 <br>
 <br>
 <br>
-(이 밑은 A.K.E.E cpu에 쓰이는 기계어를 코딩하는데 쓰이는 어셈블러가 있습니다. 현재는 html과 css 껍데기만 있지만 나중에 자바스크립트를 배우면 실제로 작동하는 어셈블러를 만들 것입니다.)
+
 <br>
 <br>
 <br>
 <br>
 <br>
     <div style="text-align: center;font-family: 'Single Day', cursive; font-size: xx-large;" id="idkxd" >
-        A.K.E.E CPU 전용 어셈블러(자바스크립트를 사용하였습니다)(미완성) 
+        A.K.E.E CPU 전용 어셈블러(자바스크립트를 사용하였습니다) 
         <br>
         <br>
     
