--- a/main.html
+++ b/main.html
@@ -37,8 +37,8 @@
 <br>
 <br>
 
-<img src="https://drive.google.com/uc?export=view&id=19lJ7uQgBDRT6Ua7rTtgTMto4JfPylyPB" style="width: 30%; height: 30%">
-<img src="https://drive.google.com/uc?export=view&id=1WUBv3yH-8raYZre9mWCrg7UWAwF4rBTD" style="width: 10%; height: 10%">
+<img src="https://lh3.googleusercontent.com/d/19lJ7uQgBDRT6Ua7rTtgTMto4JfPylyPB" style="width: 30%; height: 30%">
+<img src="https://lh3.googleusercontent.com/d/1WUBv3yH-8raYZre9mWCrg7UWAwF4rBTD" style="width: 10%; height: 10%">
 <span>  &lt;-- ALU</span>
 <br>
 <br>
@@ -55,7 +55,7 @@
 <hr>
 <br>
 <br>
-<img src="https://drive.google.com/uc?export=view&id=1Ro5mBOmJZNDXn-3HPWIw50iSWrJRYXEg" style="width: 30%; height: 30%">
+<img src="https://lh3.googleusercontent.com/d/1Ro5mBOmJZNDXn-3HPWIw50iSWrJRYXEg" style="width: 30%; height: 30%">
 <br>(NandGame 플레이 화면)
 <br>
 <br>
@@ -63,7 +63,7 @@
 
 <br>
 <br>
-<img src="https://drive.google.com/uc?export=view&id=1BRJ1CG83sePAyRQdIH8yM0bsV-k75ePF" style="width: 15%; height: 15%">
+<img src="https://lh3.googleusercontent.com/d/1BRJ1CG83sePAyRQdIH8yM0bsV-k75ePF" style="width: 15%; height: 15%">
 
 
 <br>(본격적으로 설계하기 전 노트에 전체적인 구조를 스케치했습니다.)
